# turbovault

./: CHANGELOG.md  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
crates/turbovault/: Cargo.toml
crates/turbovault-batch/src/: lib.rs
crates/turbovault-core/: Cargo.toml
crates/turbovault-core/src/: lib.rs  models.rs  task_parser.rs
crates/turbovault-graph/src/: graph.rs  health.rs
crates/turbovault-parser/src/: blocks.rs  engine.rs
crates/turbovault-parser/src/parsers/: tasks.rs
crates/turbovault-sql/: Cargo.toml  README.md
crates/turbovault-sql/src/: convert.rs  engine.rs  lib.rs
crates/turbovault-tools/: Cargo.toml
crates/turbovault-tools/src/: file_tools.rs  lib.rs  metadata_tools.rs  relationship_tools.rs  search_engine.rs  sql_engine.rs
crates/turbovault-tools/tests/: test_async_error_paths.rs  test_file_tools.rs
crates/turbovault-vault/: Cargo.toml
crates/turbovault-vault/src/: atomic.rs  edit.rs  manager.rs
crates/turbovault/src/: tools.rs
crates/turbovault/tests/: integration_test.rs
